@@ -50,6 +50,7 @@ func init() {
 		ptmprophetCmd.Flags().IntVarP(&m.PTMProphet.MaxFragZ, "maxfragz", "", 0, "limit maximum fragment charge (default: 0=precursor charge, negative values subtract from precursor charge)")
 		ptmprophetCmd.Flags().IntVarP(&m.PTMProphet.Mino, "mino", "", 0, "use specified number of pseudo-counts when computing Oscore")
 		ptmprophetCmd.Flags().IntVarP(&m.PTMProphet.MassOffset, "massoffset", "", 0, "adjust the massdiff by offset <number>")
+		ptmprophetCmd.Flags().BoolVarP(&m.PTMProphet.Static, "static", "", false, "use static fragppmtol for all PSMs instead of dynamically estimates offsets and tolerances")
 		ptmprophetCmd.Flags().BoolVarP(&m.PTMProphet.KeepOld, "keepold", "", false, "retain old PTMProphet results in the pepXML file")
 		ptmprophetCmd.Flags().BoolVarP(&m.PTMProphet.Verbose, "verbose", "", false, "produce Warnings to help troubleshoot potential PTM shuffling or mass difference issues")
 		ptmprophetCmd.Flags().BoolVarP(&m.PTMProphet.Lability, "lability", "", false, "compute Lability of PTMs")
